2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/arm.
	* Makefile.devel (multibuild-linux-arm): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Linux/arm, enable all optimizations
	except ASM.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/m68k.
	* Makefile.devel (multibuild-linux-m68k): Enable all build variants
	that are intended to work.
	* makemake.in (XCFLAGS): For Linux/m68k, enable all optimizations
	except ASM.

2018-01-10  Bruno Haible  <bruno@clisp.org>

	Enable more optimizations on Linux/hppa.
	* makemake.in (XCFLAGS): For Linux/hppa, enable all optimizations
	except ASM.
	* Makefile.devel (multibuild-linux-hppa): Don't depend on
	build-porting32-gcc-ari_asm, since build-porting32-gcc-safety0 tests
	this optimization now.

2018-01-10  Bruno Haible  <bruno@clisp.org>

	Enable more optimizations on Linux/x86_64-x32.
	* makemake.in (XCFLAGS): For Linux/x86_64-x32, enable all optimizations
	except ASM.

2018-01-10  Bruno Haible  <bruno@clisp.org>

	Enable more optimizations on Linux/i386.
	* makemake.in (XCFLAGS): For Linux/i386, enable all optimizations
	except ASM.
	* Makefile.devel (multibuild-linux-i386): Don't depend on
	build-porting32-gcc-ari_asm and build-porting32-gcc-arilev0-asm, since
	build-porting32-gcc-safety0 tests both of these optimizations now.

2018-01-10  Bruno Haible  <bruno@clisp.org>

	Enable more optimizations on Linux/x86_64.
	* makemake.in (XCFLAGS): For Linux/x86_64, enable all optimizations
	except ASM.

2018-01-09  Bruno Haible  <bruno@clisp.org>

	ari_asm for ARM: Avoid use of privileged instructions.
	Reported at <https://bugzilla.redhat.com/show_bug.cgi?id=812928#c7>.
	* ari_asm_arm.d: Use LDMFD and LDMccFD instructions without ^.
	* ari_asm_arm-macro.c: Regenerated.

2018-01-09  Bruno Haible  <bruno@clisp.org>

	ari_asm for ARM: Update instructions for ARMv5 and newer or ARMv4T.